--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChallengeYape"
         tools:targetApi="31">
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCM1hhHs_Ja6U9jf2NYxn_g7H80yYJKP0k" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
